# Playdata_DE31-Wellness-Backend

./: .env  et --hard 0fbfca14f2616c16ac1f6783010f869198f9936f  et --soft HEAD~2  pyproject.toml  음식분류 AI 데이터 영양DB 정리본_v0.6.xlsx
Fastapi-backend/: .env  .gitignore  Dockerfile  Dockerfile-model  README.md  docker-compose.yml  pyproject.toml  requirements.txt
Fastapi-backend/Wellnessapp/: Dockerfile  pyproject.toml
Fastapi-backend/Wellnessapp/app/: 2024-09-20-errors.txt  background.py  background_tasks.py  logs.py  main.py
Fastapi-backend/Wellnessapp/app/core/: config.py  exception_handlers.py  logging.py  middlewares.py
Fastapi-backend/Wellnessapp/app/daily_logs_txt/: 2024-09-19-errors.txt  2024-09-20-errors.txt
Fastapi-backend/Wellnessapp/app/db/: crud.py  models.py  session.py
Fastapi-backend/Wellnessapp/app/schemas/: auth.py  food.py  history.py  log.py  meal_recode.py  recommend.py  total_today.py  user.py
Fastapi-backend/Wellnessapp/app/services/: auth_service.py  recommend_service.py
Fastapi-backend/Wellnessapp/app/utils/: format.py  image_processing.py  (+1 more)
Fastapi-backend/Wellnessmodel/: Dockerfile-model
Fastapi-backend/Wellnessmodel/app/: model_api.py
Fastapi-backend/app/: main.py
Fastapi-backend/app/core/: config.py
Fastapi-backend/app/db/: crud.py  models.py  session.py
Fastapi-backend/app/schemas/: food.py  history.py  recommend.py  user.py
Fastapi-backend/app/services/: recommend_service.py
Fastapi-backend/app/utils/: image_processing.py  s3.py
Wellness/my_project/: pyproject.toml
Wellness/my_project/my_project/: requriements.txt
(+81 files in other folders)
